--- a/css/unit_5.css
+++ b/css/unit_5.css
@@ -30,7 +30,7 @@
         display: flex;
         justify-content: space-between; }
         .unit_5 .unit .form .age h2 {
-          margin-bottom: 3px;
+          margin-bottom: 10px;
           font-family: Raleway;
           font-size: 18px;
           font-style: normal;
@@ -38,6 +38,10 @@
           line-height: 30px;
           letter-spacing: 0px;
           text-align: center; }
+        .unit_5 .unit .form .age .old:hover {
+          background-color: #ddd9ca; }
+        .unit_5 .unit .form .age .kid:hover {
+          background-color: #ddd9ca; }
         .unit_5 .unit .form .age #line_old {
           width: 200px;
           height: 2px;
