--- a/css/scss/unit_6.scss
+++ b/css/scss/unit_6.scss
@@ -18,7 +18,7 @@
                 position: absolute;
                 top: 19px;
                 height: 10px;
-                width: 35%;
+                width: 148px;
                 background-color: #FFECA0;
                 z-index: -1;
             }
