--- a/css/unit_7.css
+++ b/css/unit_7.css
@@ -19,7 +19,7 @@
         position: absolute;
         top: 18px;
         height: 10px;
-        width: 35%;
+        width: 208px;
         background-color: #FFECA0;
         z-index: -1; }
       .unit_7 .unit .for_kids .columns {
