--- a/css/scss/unit_7.scss
+++ b/css/scss/unit_7.scss
@@ -19,7 +19,7 @@
                 position: absolute;
                 top: 18px;
                 height: 10px;
-                width: 35%;
+                width: 208px;
                 background-color: #FFECA0;
                 z-index: -1;
             }
