--- a/css/unit_6.css
+++ b/css/unit_6.css
@@ -18,7 +18,7 @@
         position: absolute;
         top: 19px;
         height: 10px;
-        width: 35%;
+        width: 148px;
         background-color: #FFECA0;
         z-index: -1; }
       .unit_6 .unit .for_kids .columns {
