--- a/css/online_kids_unit_6.css
+++ b/css/online_kids_unit_6.css
@@ -102,7 +102,6 @@
           background-color: #47ccc8; }
       .unit_6 .unit .tablets .middle {
         margin-left: 75px;
-        margin-right: 75px;
-        margin-top: -10px; }
+        margin-right: 75px; }
 
 /*# sourceMappingURL=online_kids_unit_6.css.map */
