page for olds done

--- a/css/scss/unit_2.scss
+++ b/css/scss/unit_2.scss
@@ -19,10 +19,14 @@
     }
     
     .left{
-        margin-right: 97px;
+        margin-right: 50px;
         position: relative;
     }
     .right{
         position: relative;
+    }
+    .middle{
+        position: relative;
+        margin-right: 50px;
     }
 }
