--- a/css/scss/unit_3.scss
+++ b/css/scss/unit_3.scss
@@ -1,53 +1,61 @@
 .unit_3{
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    margin: 140px 17% 0 17%;
-    padding: 0 0 0 213px;
-    background-color: #FFFBED;
-    border-radius: 70px;
-    height: 274px;
-    .maintext{
-        position: relative;
-        z-index: 2;
-        .text{
-            //styleName: h1;
-            font-family: NEXT ART;
-            font-size: 24px;
-            font-style: normal;
-            font-weight: 900;
-            line-height: 34px;
-            letter-spacing: 0.02em;
-            text-align: left;
-            z-index: 1;
-        }
-        .rectangle{
-            position: absolute;
-            height: 10px;
-            width: 383px;
-            background-color: #FFECA0;
-            bottom: 25px;
-            z-index: -1;
-        }
-    }
-    .languages{
+    .unit{
         display: flex;
-        div{
+        flex-direction: column;
+        justify-content: center;
+        margin: 140px 0 0 0;
+        padding: 0 0 0 213px;
+        background-color: #FFFBED;
+        border-radius: 70px;
+        height: 274px;
+        width: 1000px;
+        .maintext{
+            position: relative;
+            z-index: 2;
+            .text{
+                //styleName: h1;
+                font-family: NEXT ART;
+                font-size: 24px;
+                font-style: normal;
+                font-weight: 900;
+                line-height: 34px;
+                letter-spacing: 0.02em;
+                text-align: left;
+                z-index: 1;
+            }
+            .rectangle{
+                position: absolute;
+                height: 10px;
+                width: 383px;
+                background-color: #FFECA0;
+                bottom: 25px;
+                z-index: -1;
+            }
+        }
+        .languages{
             display: flex;
-            margin-right: 40px;
+            div{
+                display: flex;
+                margin-right: 40px;
+            }
+            img{
+                margin-right: 30px;
+            }
+            .lang_text{
+                //styleName: h2;
+                font-family: Raleway;
+                font-size: 18px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 30px;
+                letter-spacing: 0px;
+                text-align: left;
+            }
         }
-        img{
-            margin-right: 30px;
-        }
-        .lang_text{
-            //styleName: h2;
-            font-family: Raleway;
-            font-size: 18px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: 30px;
-            letter-spacing: 0px;
-            text-align: left;
+        @media (max-width: 1350px){
+            margin: 0;
         }
     }
 }
