--- a/css/scss/unit_5.scss
+++ b/css/scss/unit_5.scss
@@ -15,6 +15,9 @@
             border-bottom-right-radius: 70px;
             right: 0;
         }
+        .img_form2{
+            display: none;
+        }
         .form{
             padding: 80px 0 0 100px;
             display: flex;
@@ -132,5 +135,20 @@
                 background-color: #309794;
             }
         }
+        // @media (max-width: 1350px){
+        //     flex-direction: column;
+        //     .img_form1{
+        //         display: none;
+        //     }
+        //     .img_form2{
+        //         display: block;
+        //         border-top-right-radius: 0;
+        //         border-bottom-right-radius: 70px;
+        //         border-bottom-left-radius: 70px;
+        //     }
+        //     #button_sendForm{
+        //         margin-bottom: 60px;
+        //     }
+        // }
     }
 }
