--- a/css/unit_5.css
+++ b/css/unit_5.css
@@ -14,6 +14,8 @@
       border-top-right-radius: 70px;
       border-bottom-right-radius: 70px;
       right: 0; }
+    .unit_5 .unit .img_form2 {
+      display: none; }
     .unit_5 .unit .form {
       padding: 80px 0 0 100px;
       display: flex;
