--- a/css/scss/header.scss
+++ b/css/scss/header.scss
@@ -8,31 +8,53 @@ header{
         width: 80%;
         .header_logo{
             display: flex;
-        }
-    }
-    .study_menu{
-        margin-left: 10%;
-        display: flex;
-        align-items: center;
-        font-family: Raleway;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 26px;
-        letter-spacing: 0.02em;
-        text-align: left;
-        .teens{
-            display: flex;
-            margin-right: 13px;
-            div{
-                margin-right: 3px;
+            img{
+                width: 100%;
+            }
+            @media (max-width: 525px) {
+                width: 30%;
             }
         }
-        img{
-            width: 20px;
+        .study_menu{
+            margin-left: 10%;
+            display: flex;
+            align-items: center;
+            font-family: Raleway;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 26px;
+            letter-spacing: 0.02em;
+            text-align: left;
+            .teens{
+                display: flex;
+                margin-right: 13px;
+                div{
+                    margin-right: 3px;
+                }
+            }
+            img{
+                width: 20px;
+            }
+            @media (max-width: 1335px){
+                display: none;
+            }
         }
     }
+    
     .right_header{
         display: flex;
+        @media (max-width: 1335px){
+            display: none;
+        } 
+    }
+    .burger{
+        display: none;
+        @media (max-width: 1335px){
+            display: flex;
+        }
+    }
+    @media (max-width: 525px) {
+        padding: 10px;
     }
 }
