--- a/css/scss/footer.scss
+++ b/css/scss/footer.scss
@@ -35,6 +35,10 @@
     .left{
         max-width: 175px;
     }
+    .left2{
+        max-width: 175px;
+        display: none;
+    }
     .center{
         margin-top: -75px;
         .logo{
@@ -74,6 +78,32 @@
         }
         h3{
             text-align: right;
+        }
+    }
+    @media (max-width: 1000px) {
+        justify-content: center;
+        flex-direction: column;
+        height: 1000px;
+        .left{
+            display: none;
+        }
+        .left2{
+            display: flex;
+            flex-direction: column;
+            h2{
+                text-align: center;
+            }
+            h3{
+                text-align: center;
+            }
+        }
+        .right{
+            h2{
+                text-align: center;
+            }
+            h3{
+                text-align: center;
+            }
         }
     }
 }
