--- a/css/scss/unit_1.scss
+++ b/css/scss/unit_1.scss
@@ -16,6 +16,9 @@
                 text-align: left;
 
                 max-width: 665px;
+                @media (max-width: 400px) {
+                    font-size: 36px;
+                }
             }
             .button_trial_lesson{
                 font-family: Raleway;
@@ -37,6 +40,9 @@
                     background-color: #30928f;
                 }
             }
+            @media (max-width: 700px) {
+                padding-left: 20px;                
+            }
         }
     }
 }
@@ -45,7 +51,6 @@
         .unit{
             align-items: center;
             flex-direction: column;
-            margin-bottom: 80px;
             .big_text{
                 max-width: 300px;
             }
@@ -53,7 +58,7 @@
                 margin-bottom: 60px;
             }
             img{
-                width: 75%;
+                display: none;
             }
         }
     }
