--- a/css/scss/unit_10.scss
+++ b/css/scss/unit_10.scss
@@ -32,9 +32,11 @@
         }
         .timeline{
             margin-top: 60px;
+            width: 100%;
         }
         .composition_history{
             display: flex;
+            flex-wrap: wrap;
             justify-content: space-evenly;
             margin-top: 75px;
             div{
@@ -44,6 +46,19 @@
                 h2{
                     max-width: 250px;
                 }
+            }
+            img{
+                @media (max-width: 525px) {
+                    width: 80%;
+                }
+            }
+        }
+        @media (max-width: 1055px) {
+            h1{
+                text-align: center;
+            }
+            .rectangle{
+                display: none;
             }
         }
     }
