--- a/css/unit_7.css
+++ b/css/unit_7.css
@@ -6,6 +6,8 @@
   .unit_7 .unit {
     margin-top: 140px;
     display: flex; }
+    .unit_7 .unit .illustration_adapt {
+      display: none; }
     .unit_7 .unit .for_kids {
       position: relative;
       font-family: NEXT ART;
@@ -53,5 +55,22 @@
               margin-right: 10.67px; }
             .unit_7 .unit .for_kids .columns .column .lines .line {
               display: flex; }
+    @media (max-width: 1051px) {
+      .unit_7 .unit {
+        flex-direction: column; }
+        .unit_7 .unit .for_kids {
+          margin-top: 40px; }
+          .unit_7 .unit .for_kids .columns {
+            flex-direction: column; }
+            .unit_7 .unit .for_kids .columns .column {
+              width: 100%; }
+        .unit_7 .unit .illustration {
+          display: none; }
+        .unit_7 .unit .illustration_adapt {
+          display: flex;
+          width: 80%; } }
+    @media (max-width: 525px) {
+      .unit_7 .unit {
+        padding-left: 20px; } }
 
 /*# sourceMappingURL=unit_7.css.map */
