--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -6,6 +6,15 @@ h1{
     line-height: 34px;
     letter-spacing: 0.02em;
     text-align: left;
+    @media (max-width: 600px) {
+        font-family: NEXT ART;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 900;
+        line-height: 28px;
+        letter-spacing: 0.02em;
+        text-align: left;
+    }
 }
 h2{
     font-family: Raleway;
@@ -15,6 +24,15 @@ h2{
     line-height: 30px;
     letter-spacing: 0px;
     text-align: left;
+    @media (max-width: 600px) {
+        font-family: Raleway;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0px;
+        text-align: center;
+    }
 }
 h3{ 
     font-family: Raleway;
@@ -24,6 +42,15 @@ h3{
     line-height: 26px;
     letter-spacing: 0.02em;
     text-align: left;
+    @media (max-width: 600px) {
+        font-family: Raleway;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: 22px;
+        letter-spacing: 0.02em;
+        text-align: left;
+    }
 }
 .rectangle{
     position: absolute;
