--- a/css/scss/unit_1.scss
+++ b/css/scss/unit_1.scss
@@ -16,8 +16,14 @@
                 text-align: left;
 
                 max-width: 665px;
-                @media (max-width: 400px) {
-                    font-size: 36px;
+                @media (max-width: 600px) {
+                    font-family: NEXT ART;
+                    font-size: 30px;
+                    font-style: normal;
+                    font-weight: 900;
+                    line-height: 40px;
+                    letter-spacing: 0.02em;
+                    text-align: left;
                 }
             }
             .button_trial_lesson{
@@ -28,8 +34,8 @@
                 line-height: 18px;
                 letter-spacing: 0.01em;
                 text-align: left;
-    
-                width: 230px;
+                max-width: 230px;
+                width: 60%;
                 margin-top: 40px;
                 padding: 18px 38px 18px 38px;
                 background-color: #236967;
